<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <TextView
        android:id="@+id/dialog_no_map"
        android:visibility="gone"
        android:textColor="@color/red_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/no_map"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/dialog_bai_du"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/red_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bai_du"
        android:textSize="25dp" />
    <TextView
        android:id="@+id/dialog_gao_de"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/red_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/gao_de"
        android:textSize="25dp" />
    <TextView
        android:id="@+id/dialog_choose_cancel"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/cancel"
        android:textSize="25dp" />

</LinearLayout>